# unicode

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/unicode/: characters.h  unicode.h  utf8.h
tests/: CMakeLists.txt  main.cpp
